--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img class="wood pic" src="pics/wood.jpg" />
       </div>
       <div class="list-item">
-        <div class="rfid text">It uses rfid.</div>
+        <div class="rfid text">It uses rfid technology.</div>
         <img class="rfid pic" src="pics/rfid.jpg" />
       </div>
       <div class="list-item">
